<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView

        android:id="@+id/text_view_artist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/artistName" />

    <TextView
        android:id="@+id/text_view_artist_track_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_artist_name"
        tools:text="@string/TrackName" />

    <TextView
        android:id="@+id/text_view_artist_release_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_artist_track_name"
        tools:text="@string/Release_Date" />

    <TextView
        android:id="@+id/text_view_artist_track_primary_genre_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_artist_release_date"
        tools:text="@string/PrimaryGenreName" />

    <TextView
        android:id="@+id/text_view_artist_release_trackPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin = "10dp"
        android:ellipsize="end"
        android:gravity="end"
        android:maxLines="1"
        app:layout_constraintLeft_toRightOf="@+id/text_view_artist_track_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_artist_name"
        tools:text="@string/TrackPrice" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="10dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/text_view_artist_track_primary_genre_name" />

</androidx.constraintlayout.widget.ConstraintLayout>